test: updating tests